1.8.M03 (not yet released)
--------------------
o Added RELATE
o BREAKING CHANGE: Changed the CREATE syntax, so it looks more like RELATE
o Fixes issues #512, #506, #514, #508, #523, #526

1.8.M02 (2012-05-11)
--------------------
o Added the possibility to create nodes from an iterable of maps
o Fixes issue #479

1.8.M01 (2012-04-27)
--------------------
o Added the possibility to return all graph elements using RETURN *
o Added CREATE, SET, DELETE, FOREACH, WITH
o Fixes issue #432, #446

1.7 (2012-04-18)
----------------
o Added the possibility to use multiple relationship types on patterns
o Fixed bug when aggregation is used in order by and not listed in the RETURN clause

1.7.M01 (2012-03-12)
--------------------
o Added literal collections and the IN predicate
o Added HEAD, TAIL, LAST and FILTER
o Added comments
o Added ! so that missing property can evaluate to false
o The column names are now exactly as written in the RETURN expression
o BREAKING CHANGE: To check whether a property exists on a node, use the HAS(...) function
o Arithmetic & string concatenation
o An identifier can now be assigned all the nodes/rels in the graph - START a=node(*)
o Predicates can be specified inside of a pattern relationship description
o Fixed issues #196, #164, #193, #217, #214, #201, #198, #240, #254

1.6 (2012-01-19)
----------------
o Lots of changes to the parsers error reporting
o Queries can now be pre-pended with which parser version to use
o Database configuration can now change which version of the parser to use as default

1.6.M03 (2012-01-12)
--------------------
o Added a different aggregation logic. Makes aggregating on the same columns as sorting much faster
o Made it possible to query on array properties
o Fixed bug #157 - Comparing things of different types now gives false instead of type error
o Fixed bug #140 - Identifier can now named same thing as a parameter
o Fixed bug that tripped up the patter matchern when a node is sent in as a parameter